# td-client-rust

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: client.rs  error.rs  json_helper.rs  lib.rs  mod.rs  model.rs  table_import.rs  value.rs
src/td/: client.rs  error.rs  json_helper.rs  table_import.rs
tests/: integration_test.rs
