[package]
name = "td-client"
version = "0.1.0"
authors = ["Mitsunori Komatsu <komamitsu@gmail.com>"]
description = "Rust Client Library for Treasure Data"
homepage = "https://github.com/komamitsu/td-client-rust"
repository = "https://github.com/komamitsu/td-client-rust"
readme = "README.md"
license = "Apache-2.0"
keywords = ["TreasureData"]

[dependencies]
log = "0.3"
hyper = "0.9"
rustc-serialize = "0.3"
rmp = "0.7"
flate2 = { version = "0.2", features = ["zlib"], default-features = false }
regex = "0.1"
tempdir = "0.3"
time = "0.1"
chrono = { version = "0.2", features = ["rustc-serialize"] }
