[package]
name = "td-client"
version = "0.7.1"
authors = ["Mitsunori Komatsu <komamitsu@gmail.com>"]
description = "Rust Client Library for Treasure Data"
homepage = "https://github.com/komamitsu/td-client-rust"
repository = "https://github.com/komamitsu/td-client-rust"
readme = "README.md"
license = "Apache-2.0"
keywords = ["TreasureData"]

[dependencies]
log = "0.3"
reqwest = "0.9"
rustc-serialize = "0.3"
rmp = "0.8"
rmpv = "0.4"
flate2 = { version = "0.2", features = ["zlib"], default-features = false }
regex = "0.2"
tempdir = "0.3"
chrono = { version = "0.3", features = ["rustc-serialize"] }

[dev-dependencies]
mockito = "0.15"
