[package]
name = "td-client"
version = "0.8.0"
authors = ["Mitsunori Komatsu <komamitsu@gmail.com>"]
description = "Rust Client Library for Treasure Data"
homepage = "https://github.com/komamitsu/td-client-rust"
repository = "https://github.com/komamitsu/td-client-rust"
readme = "README.md"
license = "Apache-2.0"
keywords = ["TreasureData"]

[dependencies]
log = "0.4"
reqwest = "0.9"
rustc-serialize = "0.3"
rmp = "0.8"
rmpv = "0.4"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
regex = "1.3"
tempdir = "0.3"
chrono = { version = "0.4", features = ["rustc-serialize"] }

[dev-dependencies]
mockito = "0.25"
rand = "0.7"
